scrollbar fixed, current working on forgot-pass UI

--- a/src/app/user-auth/login/login.component.css
+++ b/src/app/user-auth/login/login.component.css
@@ -110,7 +110,7 @@ input {
 	transform: translate(-50%, -50%);
 	width: 768px;
 	max-width: 100%;
-	min-height: 480px;
+	min-height: 600px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -264,4 +264,3 @@ input {
 	margin-left: 1%;
 	margin-bottom: 550px;
 }
-
